# mandelizer

./: CMakeLists.txt  Mandelizer.kdev4  color.cpp  color.h  colormapping.cpp  colormapping.h  display.cpp  display.h  grid.cpp  grid.h  gridset.cpp  gridset.h  mainpanel.cpp  mainpanel.h  mainwindow.cpp  mainwindow.h  mandelbrot_calculator.cpp  mandelbrot_calculator.h  mandelbrotcalculator.cpp  mandelizer.cpp  mandelizer.h  point.cpp  point.h  screenpoint.cpp  screenpoint.h  transformation.cpp  transformation.h
